# imaginary-playpen

./: .gitignore  Cargo.toml  README.md
macro_derive/: Cargo.toml
macro_derive/src/: lib.rs
src/: bin.rs  canvas.rs  input.rs  javascript.rs  lib.rs  shader.rs  utils.rs
src/applications/: application.rs  fractal.rs
src/math/: complex.rs  interpreter.rs  parser.rs  serializer.rs
src/math copy/: complex.rs  extended.rs  interpreter.rs  mod.rs  parser.rs  serializer.rs
src/shader/: draw.frag  fractal-3d.frag  fractal.frag  frag.glsl  vert.glsl
www/: index.html  index.js  package-lock.json  package.json  stylesheet.css  webpack.config.js
