[package]
name = "imaginary-playpen"
version = "0.1.0"
authors = ["Christian Jordan"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "binary"
path = "src/bin.rs"


[profile.release]
lto = true

[features]
#default = ["wee_alloc"]


[dependencies]
macro_derive = { version = "0.1.0", path = "./macro_derive" }
derive_more = "0.99.11"

futures = "0.3.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_bytes = "0.11.5"

wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.45"
gloo = "0.2.1"

log = "0.4"
console_log = { version = "0.2", features = ["color"] }


[dependencies.web-sys]
version = "0.3.45"
features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "console",
    "EventTarget",
    "Event", "MouseEvent", "WheelEvent", "KeyboardEvent", "UiEvent",
    "DomRect",
    "Performance",
    "ImageData",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "Attr",

    "HtmlCanvasElement", "CanvasRenderingContext2d",
    "WebGl2RenderingContext", "WebGlBuffer", "WebGlRenderingContext", "WebGlProgram", "WebGlShader", "WebGlUniformLocation",
    "ImageBitmapRenderingContext",

    "HtmlParagraphElement", "HtmlDivElement",
    "HtmlImageElement", "HtmlVideoElement", "HtmlSourceElement", "HtmlBodyElement",

    "GetUserMediaRequest", "MediaStreamConstraints", "Navigator", "MediaDevices", "MediaStream", "MediaTrackSupportedConstraints",

    "CssStyleDeclaration",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
wasm-bindgen-futures = "0.4.18"
